<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginBottom="40dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_task_list_solid"
            android:contentDescription="@string/iv_Descrip_ic_task_list_solid"/>

        <View
            android:layout_width="8dp"
            android:layout_height="0dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/titulo_1er"
            android:fontFamily="@font/poppins_semi_bold"
            android:textColor="#4D55C4"
            android:textSize="26sp" />

        <View
            android:layout_width="8dp"
            android:layout_height="0dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/titulo_2do"
            android:fontFamily="@font/poppins_extra_bold"
            android:textColor="#4D55C4"
            android:textSize="26sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/tvSpinner"
                android:fontFamily="@font/roboto_regular"
                android:textSize="16sp"
                android:textColor="#747474"
                />

            <Spinner
                android:id="@+id/profile_spinner"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/et_bg" />
        </LinearLayout>

        <!--
        <androidx.appcompat.widget.AppCompatButton
            style="@android:style/Widget.Button"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:text="Ingresar"
            android:textSize="16sp"
            android:drawableRight="@drawable/ic_arrow_right"
            android:drawablePadding="1dp"
            android:background="@drawable/btn_bg_solid"
            android:textColor="@color/white"
            />
        -->

        <LinearLayout
            android:id="@+id/btnEnter"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:background="@drawable/btn_bg_solid"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_Ingresar"
                android:textColor="@color/white"
                android:fontFamily="@font/roboto_bold"
                android:textSize="18sp" />

            <View
                android:layout_width="10dp"
                android:layout_height="0dp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/iv_Descrip_ic_arrow_right"
                android:src="@drawable/ic_arrow_right" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="#A1A1A1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/tvO"
                android:fontFamily="@font/roboto_regular"
                android:textColor="#A1A1A1" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="#A1A1A1" />
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/addProfile"
            style="@android:style/Widget.Button"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/btn_bg"
            android:text="@string/btn_Crear_Perfil"
            android:textColor="#6C74FF"
            android:fontFamily="@font/roboto_bold"
            android:textSize="18sp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>